--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="background"></div>
     <img src="images/Bird.png" alt="bird" class="bird" id="bird-1">
     <div class="message">
-        <p>Tap To Start Game</p>
+        <p>Flappy Bird</p>
         <p class="controls-text">Tap to Fly</p>
     </div>
     <div class="score">
